kubernetes/observability/ingress_grafana_observability.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress-grafana-observability
  namespace: observability
spec:
  rules:
  - host: grafana.192.168.56.102.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prom-stack-grafana
            port:
              number: 80
